frontend: Use env for theming

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,11 +27,12 @@
         display: flex;
         flex-direction: column;
         align-content: flex-start;
+        background-color: %REACT_APP_BACKGROUND_COLOR%;
       }
     </style>
     <title>%REACT_APP_BLOG_TITLE%</title>
   </head>
-  <body style="background-color: %REACT_APP_BACKGROUND_COLOR%">
+  <body style="background-color: %REACT_APP_FOREGROUND_COLOR%">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
