--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -31,6 +31,20 @@
       }
     </style>
     <title>%REACT_APP_BLOG_TITLE%</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-YD2VF1ZY5N"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-YD2VF1ZY5N');
+    </script>
   </head>
   <body style="background-color: %REACT_APP_FOREGROUND_COLOR%">
     <noscript>You need to enable JavaScript to run this app.</noscript>
